<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PICNICly</string>
    <string name="edit_message">Cerca</string>
    <string name="search_button"></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Login</string>
    <string name="title_activity_home">PICNICly</string>
    <string name="search_location_here">Inserisci una località qui</string>
    <string name="facebook_app_id">260863734343489</string>
    <string name="facebook_app_id2">265203190575740</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Toast_Error">Errore</string>
    <string name="next">Segui</string>
    <string name="skip">Salta</string>
    <string name="gotit">OK</string>

    <string name="action_settings">Settings</string>
    <string name="info">Informazioni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="info_fragment">Nome app: PICNICly
        &#xA;Versione: 1.0

        &#xA;Sviluppata da: Massive Dynamics
        &#xA;Contattaci: picnicly.app@gmail.com</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="BackDropBottomSheetBehavior">com.picnicly.picnic_ly.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.picnicly.picnic_ly.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.picnicly.picnic_ly.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.picnicly.picnic_ly.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.picnicly.picnic_ly.ScrollingAppBarLayoutBehavior</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <string name="dummy_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.\n\nLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo."</string>

    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="hello"><![CDATA[<b>The Awesome Sliding Up Panel</b><br/> Brought to you by<br/><a href="http://umanoapp.com">http://umanoapp.com</a>]]></string>
    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>
    <string name="send_to">Condividi</string>
    <string name="large_text">
        "Qui puoi trovare i "
    </string>
    <string name="visitato">VISITATI</string>
    <string name="preferiti">PREFERITI</string>
    <string name="condividi">CONDIVIDI</string>
    <string name="title_activity_preferiti">Preferiti</string>
    <string name="title_activity_visitati">Visitati</string>
    <string name="contact_us"><a href="picnicly.app@gmail.com">picnicly.app@gmail.com</a></string>
    <string name="credits_text">CEVID - Centro Veneto di Innovazione Digitale per Cittadini, Imprese e Pubblica Amministrazione.
        Università Ca Foscari e Regione del Veneto </string>
    <string name="credits_text2"> Azione 1: Open Data della Regione Veneto: dal paradigma DaaS per la fruizione
        dei dati alle smart app </string>
    <string name="credits_text3">Coordinatore: prof. A.Cortesi</string>
    <string name="credits_text4"> App progettata e realizzata da: </string>
    <string name="credits_text5">Corso di laurea in Informatica - Università Ca Foscari</string>
    <!-- welc1 -->
    <string name="welc1_title">ESPLORA</string>
    <string name="welc1_descr">Esplora i punti di interesse intorno a te, come parchi e aree picnic!</string>

    <!-- welc2 -->
    <string name="welc2_title">VISITATI</string>
    <string name="welc2_descr">Se sei registrato, aggiungi i punti di interessi visitati, così da scoprire sempre posti nuovi!</string>

    <!-- welc3 -->
    <string name="welc3_title">PREFERITI</string>
    <string name="welc3_descr">Se ti registri, puoi anche aggiungere i posti che ti hanno emozionato di più!</string>

    <!-- welc4 -->
    <string name="welc4_title">HELP</string>
    <string name="welc4_descr">Ricordati che è presente una sezione help in cui potrai sempre trovare le risposte ai tuoi dubbi!</string>

    <!-- welc5 -->
    <string name="welc5_title">DIVERTITI</string>
    <string name="welc5_descr">Ed ora divertiti con PICNICly! :)</string>


</resources>
