<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CreditsActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreditsActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:text="@string/credits_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:text="@string/credits_text2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:text="@string/credits_text3"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:text="@string/credits_text4"
        android:layout_marginTop="35dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text=" "
        android:textStyle="bold"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:id="@+id/textView5" />


    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="Mariagiovanna Czarnecki"
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_text5"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=" "
        android:textStyle="bold"
        android:id="@+id/textView11"
        android:layout_above="@+id/textView4"
        android:visibility="gone"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView10"
        android:text="Dora Pavan"
        android:layout_margin="15dp"
        android:layout_above="@+id/textView4"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="Paolo Vedorin"
        android:textStyle="bold"
        android:id="@+id/textView8"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />


</RelativeLayout>




</android.support.design.widget.CoordinatorLayout>
