<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoDragView="@+id/dragView"
    sothree:umanoOverlay="true"
    sothree:umanoScrollableView="@+id/list">

    <!-- MAIN CONTENT -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true" tools:openDrawer="start">

    <include layout="@layout/app_bar_main" android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SplashActivity">



        <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="100dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">


        </LinearLayout>


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            tools:context="com.viralandroid.googlemapsandroidapi.MapsActivity" />


    </LinearLayout>


    <android.support.design.widget.NavigationView android:id="@+id/nav_view"
        android:layout_width="wrap_content" android:layout_height="match_parent"
        android:layout_gravity="start" android:fitsSystemWindows="true"
        android:background="@color/black"
        app:itemBackground="@color/black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/nav_header_main" app:menu="@menu/activity_menulaterale_drawer" />


</android.support.v4.widget.DrawerLayout>

    </FrameLayout>
    <!-- SLIDING LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="false"
        android:id="@+id/dragView">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/frm">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/biel"
                app:layout_collapseMode="parallax"
                android:id="@+id/imageView" />

        </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:visibility="visible"
            android:id="@+id/panel"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"/>

            <Button
                android:id="@+id/direct"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|end"
                android:layout_gravity="center|end"
                android:tint="@color/white"
                android:clickable="true"
                android:background="@drawable/pin"
                android:paddingLeft="10dp"/>


        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="false"
        android:id="@+id/actions">

        <Button
            android:id="@+id/visitato"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:gravity="center_vertical|start"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_vis"
            android:clickable="true"
            android:paddingLeft="10dp"/>

        <Button
            android:id="@+id/preferiti"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:gravity="center_vertical|center"
            android:paddingRight="10dp"
            android:layout_marginTop="25dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_pic"
            android:clickable="true"
            android:paddingLeft="10dp"/>

        <Button
            android:id="@+id/condividi"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:gravity="center_vertical|end"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:background="@drawable/ic_menu_share"
            android:paddingLeft="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="false"
            android:id="@+id/txt">

            <TextView
                android:id="@+id/vis"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:textSize="14sp"
                android:text="@string/visitato"
                android:textColor="@color/white"
                android:gravity="center_vertical|start"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/pref"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:textSize="14sp"
                android:text="@string/preferiti"
                android:textColor="@color/white"
                android:gravity="center_vertical|center"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/condividi"
                android:gravity="center_vertical|end"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#000"></LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="false"
            android:id="@+id/rate">

            <TextView
                android:id="@+id/numero"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp" />

            <RatingBar
                android:id="@+id/stars"
                android:rating="0.0"
                android:stepSize="0.5"
                android:numStars="5"
                android:clickable="true"
                android:layout_centerHorizontal="true"
                android:background="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CustomRatingBar"
                android:layout_marginTop="55dp"/>


        </RelativeLayout>

        <ListView
            android:id="@+id/list"
            android:background="#000"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </ListView>


        <!--<ScrollView-->
        <!--android:id="@+id/sv"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!-->-->
        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="The standard Lorem Ipsum passage, used since the 1500Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Section 1.10.32 of  written by Cicero in 45 t perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?1914 translation by H. RackhamBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete accouof the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."/>-->
        <!--</ScrollView>-->
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>